Update app name, slug, and splash image in app.json
Updated app.json to change the app name and slug, modify splash image path, and adjust asset bundle patterns.

--- a/app.json
+++ b/app.json
@@ -1,17 +1,19 @@
 {
   "expo": {
-    "name": "abonelik-takip-",
-    "slug": "snack-b4919ff0-f3e5-4c37-8bc5-edc7f1ebece6",
+    "name": "Abonelik Takip",
+    "slug": "abonelik-takip",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -20,11 +22,7 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
-      "edgeToEdgeEnabled": true
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+      }
     }
   }
 }
