--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "expo": {
+    "extra": { "eas": { "projectId": "bda0925d-79e5-4e78-9e57-55866050a4e0" } },
     "name": "Abonelik Takip",
     "slug": "abonelik-takip",
     "version": "1.0.0",
