Update projectId in app.json

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "extra": { "eas": { "projectId": "bda0925d-79e5-4e78-9e57-55866050a4e0" } },
+    "extra": { "eas": { "projectId": "bda0925d-2f94-498f-a908-3e9e8868d82b"
     "name": "Abonelik Takip",
     "slug": "abonelik-takip",
     "version": "1.0.0",
