Update eas.json for build configuration

--- a/eas.json
+++ b/eas.json
@@ -3,7 +3,11 @@
     "preview": {
       "android": {
         "buildType": "apk"
-      }
+      },
+      "cli": {
+        "appVersionSource": "remote"
+      },
+      "credentialsSource": "remote"
     }
   }
 }
