Add Android build configuration to app.json
Updated app.json to include build configuration for Android.

--- a/app.json
+++ b/app.json
@@ -1,15 +1,9 @@
 {
-  "expo": {
-    "name": "Abonelik Takip",
-    "slug": "abonelik-takip",
-    "version": "1.0.0",
-    "extra": {
-      "eas": {
-        "projectId": "bda0925d-2f94-498f-a908-3e9e8868d82b"
+  "build": {
+    "preview": {
+      "android": {
+        "buildType": "apk"
       }
-    },
-    "android": {
-      "package": "com.abonelik.takip"
     }
   }
 }
