Refactor app.json by cleaning up properties
Removed unused properties and updated projectId.

--- a/app.json
+++ b/app.json
@@ -3,19 +3,12 @@
     "name": "Abonelik Takip",
     "slug": "abonelik-takip",
     "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
     "android": {
-      "package": "com.ender12.aboneliktakip",
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+      "package": "com.ender12.aboneliktakip"
     },
     "extra": {
       "eas": {
-        "projectId": "bda0925d-2f94-498f-a908-3e9e8868d82b"
+        "projectId": "50054daf-ff48-4a1b-ae47-6340c32c83b9"
       }
     }
   }
