Fix slug format in app.json

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Abonelik Takip",
-    "slug": "abonelik-takip",
+    "slug": "abonelik-takip-",
     "version": "1.0.0",
     "android": {
       "package": "com.ender12.aboneliktakip"
